# rmgdb

./: LICENSE  README.md
data/: pyproject.toml  requirements.txt
data/rmgdatabase/statmech/: build.py  demo_v2.db  demo_v2.json  round_trip.py
data/rmgdatabase/statmech/yml/: metadata.yml
data/rmgdatabase/statmech/yml/groups/: groups.yml
data/rmgdatabase/statmech/yml/libraries/: halogens_G4.yml
data/statmech/: build.py  build_demo.py  demo.db  demo_v2.db  schema.py  tree_str_to_pairs.py  users.py  views.py
data/statmech/original/libraries/: halogens_G4_debug.py
standard/: pyproject.toml
standard/rmgdb/statmech/: schema.py  triggers.py  views.py
